--- a/src/services/obs/CMakeLists.txt
+++ b/src/services/obs/CMakeLists.txt
@@ -6,4 +6,10 @@ add_library(
 target_include_directories(
     obs
     PRIVATE
-    ${CMAKE_SOURCE_DIR}/src/services)
+    ${CMAKE_SOURCE_DIR}/src/services
+    ${CMAKE_SOURCE_DIR}/src/)
+
+target_include_directories(
+    obs
+    PUBLIC
+    ${EXTERNAL_LIB_DIR}/plog/include)
