--- a/src/services/mockservice/CMakeLists.txt
+++ b/src/services/mockservice/CMakeLists.txt
@@ -1,13 +1,16 @@
 add_library(
     mockservice
     SHARED
-    mockservice.cpp)
+    mockservice.cpp
+    ${CMAKE_SOURCE_DIR}/src/events/event_server.cpp
+    ${CMAKE_SOURCE_DIR}/src/events/event_client.cpp)
 
 target_include_directories(
     mockservice
     PRIVATE
     ${CMAKE_SOURCE_DIR}/src/services
     ${CMAKE_SOURCE_DIR}/src
+    ${CMAKE_SOURCE_DIR}/src/events
     ${EXTERNAL_LIB_DIR}/plog/include)
 
 set_target_properties(
