--- a/src/services/obs/CMakeLists.txt
+++ b/src/services/obs/CMakeLists.txt
@@ -1,13 +1,16 @@
 add_library(
     obs
     SHARED
-    obs.cpp)
+    obs.cpp
+    ${CMAKE_SOURCE_DIR}/src/events/event_client.cpp
+    ${CMAKE_SOURCE_DIR}/src/events/event_server.cpp)
 
 target_include_directories(
     obs
     PRIVATE
     ${CMAKE_SOURCE_DIR}/src/services
-    ${CMAKE_SOURCE_DIR}/src/)
+    ${CMAKE_SOURCE_DIR}/src/
+    ${CMAKE_SOURCE_DIR}/src/events)
 
 target_include_directories(
     obs
