--- a/src/services/mockservice/CMakeLists.txt
+++ b/src/services/mockservice/CMakeLists.txt
@@ -1,33 +1,18 @@
 add_library(
-    mockserviceA
+    mockservice
     SHARED
     mockservice.cpp)
 
 target_link_libraries(
-    mockserviceA
+    mockservice
     PUBLIC
     LIB_FRAMEWORK)
 
 set_target_properties(
-    mockserviceA
+    mockservice
     PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/test"
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/test"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/test")
 
-add_library(
-    mockserviceB
-    SHARED
-    mockservice.cpp)
-
-target_link_libraries(
-    mockserviceB
-    PUBLIC
-    LIB_FRAMEWORK)
-
-set_target_properties(
-    mockserviceB
-    PROPERTIES
-    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/test"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/test"
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/test")
+set(MOCK_SERVICE_SOURCES ${CMAKE_SOURCE_DIR}/src/services/mockservice/mockservice.cpp PARENT_SCOPE)
