--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -26,13 +26,14 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: $PWD
         run:  pwd
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build
         run: |
-          cd $GITHUB_WORKSPACE/squidbot
           cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/
           cmake --build ./targets
-          ./targets/bin/test/squidtest
+      
+      - name: Test
+        run: ./targets/bin/test/squidtest
