--- a/src/core/runner/CMakeLists.txt
+++ b/src/core/runner/CMakeLists.txt
@@ -1,2 +1,2 @@
-set(CWD ${CMAKE_SOURCE_DIR}/src/framework/runner)
+set(CWD ${CMAKE_SOURCE_DIR}/src/core/runner)
 set(RUNNER_TEST_SOURCES ${CWD}/runner_test.cpp PARENT_SCOPE)
