--- a/src/core/service/CMakeLists.txt
+++ b/src/core/service/CMakeLists.txt
@@ -1,3 +1,3 @@
-set(CWD ${CMAKE_SOURCE_DIR}/src/framework/service)
+set(CWD ${CMAKE_SOURCE_DIR}/src/core/service)
 set(SERVICE_SOURCES ${CWD}/service_manager.cpp PARENT_SCOPE)
 set(SERVICE_TEST_SOURCES ${CWD}/service_test.cpp ${CWD}/service_manager_test.cpp ${CWD}/service_loader_test.cpp PARENT_SCOPE)
