--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,7 @@
-link_directories(runner events service)
+link_directories(runner events service plugin)
 add_subdirectory(runner)
 add_subdirectory(events)
 add_subdirectory(service)
-set(CORE_TEST_SOURCES ${RUNNER_TEST_SOURCES} ${EVENTS_TEST_SOURCES} ${SERVICE_TEST_SOURCES} PARENT_SCOPE)
-add_library(LIB_CORE ${EVENTS_SOURCES} ${SERVICE_SOURCES})
+add_subdirectory(plugin)
+set(CORE_TEST_SOURCES ${RUNNER_TEST_SOURCES} ${EVENTS_TEST_SOURCES} ${SERVICE_TEST_SOURCES} ${PLUGIN_TEST_SOURCES} PARENT_SCOPE)
+add_library(LIB_CORE ${EVENTS_SOURCES} ${SERVICE_SOURCES} ${PLUGIN_SOURCES})
