--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18.4)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")# -fsanitize=address")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -fsanitize=address")
 
 project(Squidbot
         VERSION 1
@@ -32,12 +32,15 @@ include_directories(
     ${LIB_PLOG}
     ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/core
     ${CMAKE_SOURCE_DIR}/src/core/service ${CMAKE_SOURCE_DIR}/src/core/events
-    ${CMAKE_SOURCE_DIR}/src/core/runner ${CMAKE_SOURCE_DIR}/src/services ${CMAKE_SOURCE_DIR}/src/core/plugin)
+    ${CMAKE_SOURCE_DIR}/src/core/runner ${CMAKE_SOURCE_DIR}/src/core/plugin
+    ${CMAKE_SOURCE_DIR}/src/services ${CMAKE_SOURCE_DIR}/src/plugins)
 
 add_subdirectory(src/core)
 add_subdirectory(src)
 #add_subdirectory(src/services/obs)
 add_subdirectory(src/services/mockservice)
+add_subdirectory(src/plugins/mockplugin)
+add_subdirectory(src/plugins/admin)
 
 # Google Test Stuff
 FetchContent_Declare(
@@ -54,7 +57,7 @@ enable_testing()
 add_executable(
     squidtest
     src/squidbot_test.cpp
-    ${CORE_TEST_SOURCES} ${MOCK_SERVICE_SOURCES})
+    ${CORE_TEST_SOURCES} ${MOCK_SERVICE_SOURCES} ${MOCKPLUGIN_SOURCES})
 
 target_link_libraries(
     squidtest
