Adds copyright notice

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,3 +1,6 @@
+# CMakeLists.txt
+# Copyright (C) 2023  Squidpie
+
 link_directories(runner events service plugin)
 add_subdirectory(runner)
 add_subdirectory(events)
