--- a/src/services/CMakeLists.txt
+++ b/src/services/CMakeLists.txt
@@ -1,3 +1,6 @@
+# CMakeLists.txt
+# Copyright (C) 2023  Squidpie
+
 set(SERVICE_SOURCES service.h service.cpp)
 
 add_library(LIB_SERVICE ${SERVICE_SOURCES})
