--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,9 +24,9 @@ jobs:
       - name:  "🔧 build"
         run: |
           cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/
-          cmake --build ./targets -j16
+          cmake --build ./targets
         
-      - name: "🔍 linting"
+      - name: "🔧 linting"
         uses: cpp-linter/cpp-linter-action@v2
         id: linter
         env:
@@ -34,7 +34,7 @@ jobs:
         with:
           style: file
 
-      - name: "linting fail check"
+      - name: "🔍 linting fail check"
         if: steps.linter.outputs.checks-failed > 0
         run: echo "DEBUG OUTPUT LINTING FAILED"
 
