--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   test:
     name: Squidtest
-    runs-on: ubunutu-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: "☁️ checkout"
