--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,5 +1,7 @@
 name: codeql-analysis
 on:
+  push:
+    branches: [dev]
   pull_request:
     branches: [dev]
   workflow_dispatch:
@@ -17,7 +19,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Init CodeQL
-      uses: github/codeql-action/init@v1
+      uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
 
@@ -27,7 +29,7 @@ jobs:
         cmake --build ./targets
 
     - name: Perform analysis
-      uses: github/codeql-action/analyze@v1
+      uses: github/codeql-action/analyze@v2
 
     - name: Generate report
       uses: awshole/codeql-report@v1.1
