--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name:  "🔧 build"
         run: |
-          cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/
-          cmake --build ./targets
+          cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/debug
+          cmake --build ./targets/debug -j32 --target squidtest
         
-      - name: "🔧 linting"
+      - name: "🔧 linter"
         uses: cpp-linter/cpp-linter-action@v2.4.0
         id: linter
         env:
@@ -34,9 +34,9 @@ jobs:
         with:
           style: file
 
-      - name: "🔍 linting fail check"
+      - name: "🔍 linter fail check"
         if: steps.linter.outputs.checks-failed > 0
         run: exit 1
 
       - name: "🔍 test"
-        run: ./targets/bin/test/squidtest
+        run: ./targets/debug/bin/squidtest
