--- a/src/services/mockservice/CMakeLists.txt
+++ b/src/services/mockservice/CMakeLists.txt
@@ -14,8 +14,8 @@ target_link_libraries(
 set_target_properties(
     mockservice
     PROPERTIES
-    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/test/services"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/test/services"
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/test/services")
+    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/services"
+    EXCLUDE_FROM_ALL True)
 
 set(MOCK_SERVICE_SOURCES ${CMAKE_SOURCE_DIR}/src/services/mockservice/mockservice.cpp PARENT_SCOPE)
