--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -23,20 +23,8 @@ jobs:
 
       - name:  "🔧 build"
         run: |
-          cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/
-          cmake --build ./targets
-        
-      - name: "🔧 linting"
-        uses: cpp-linter/cpp-linter-action@v2.4.0
-        id: linter
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          style: file
-
-      - name: "🔍 linting fail check"
-        if: steps.linter.outputs.checks-failed > 0
-        run: exit 1
+          cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/debug
+          cmake --build ./targets/debug -j32 --target squidtest
 
       - name: "🔍 test"
-        run: ./targets/bin/test/squidtest
+        run: ./targets/debug/bin/squidtest
