--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,6 +1,7 @@
 # development.yml
 # Copyright (C) 2023  Squidpie
 
+---
 name: Development
 
 on:
@@ -20,11 +21,20 @@ jobs:
     steps:
       - name: "☁️ checkout"
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      - name:  "🔧 build"
+      - name: "🔧 build"
         run: |
           cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/debug
           cmake --build ./targets/debug -j32 --target squidtest
 
+      - name: "🔍 linter"
+        uses: github/super-linter@v4
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: "dev"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
       - name: "🔍 test"
         run: ./targets/debug/bin/squidtest
