--- a/src/services/adminlisten/CMakeLists.txt
+++ b/src/services/adminlisten/CMakeLists.txt
@@ -2,19 +2,19 @@
 # Copyright (C) 2023  Squidpie
 
 add_library(
-  adminservice
+  adminlisten
   SHARED
-  adminservice.cpp factory.cpp)
+  adminlisten.cpp factory.cpp)
 
 target_link_libraries(
-  adminservice
+  adminlisten
   PUBLIC
   LIB_CORE)
 
 set_target_properties(
-  adminservice
+  adminlisten
   PROPERTIES
   ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
   LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/services")
 
-set(ADMIN_SERVICE_SOURCE ${CMAKE_SOURCE_DIR}/src/services/adminservice/adminservice.cpp PARENT_SCOPE)
+set(ADMIN_LISTEN_SOURCE ${CMAKE_SOURCE_DIR}/src/services/adminlisten/adminlisten.cpp PARENT_SCOPE)
