--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,11 +24,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: "🔧 build"
+      - name: "🔧 build squidbot"
         run: |
           cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/debug
-          cmake --build ./targets/debug -j32 --target squidtest
+          cmake --build ./targets/debug -j32 --target all squidtest
 
+      - name: "🔧 build docker"
+        run: docker build -t squidbot
+      
       - name: "🔍 linter"
         uses: github/super-linter@v4
         env:
@@ -36,5 +39,8 @@ jobs:
           DEFAULT_BRANCH: "dev"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: "🔍 test"
+      - name: "🔍 squidtest"
         run: ./targets/debug/bin/squidtest
+        
+      - name: "🔍 docker test"
+        run: docker run squidbot:latest
