Trying to fix workflow

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -12,7 +12,7 @@ on:
       - synchronize
       - reopened
   workflow_call:
-    
+
 jobs:
   test:
     name: Squidtest
@@ -24,17 +24,17 @@ jobs:
         with:
           fetch-depth: 0
 
-     - name: "🔍 linter"
-       uses: github/super-linter@v4
-       env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: "dev"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "🔧 build squidbot"
+      - name: "🔧 build"
         run: |
           cmake -DCMAKE_BUILD_TYPE=Debug -S. -B./targets/debug
           cmake --build ./targets/debug -j32 --target all squidtest
+
+      - name: "🔍 linter"
+        uses: github/super-linter@v4
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: "dev"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "🔧 build docker"
         run: docker build -t squidbot .
