tries ubuntu-18.04 for the heck of it

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   test:
     name: Squidtest
-    runs-on: ubuntu-bionic
+    runs-on: ubuntu-18.04
     timeout-minutes: 10
     steps:
       - name: "☁️ checkout"
