--- a/.github/workflows/squidbot-validate.yml
+++ b/.github/workflows/squidbot-validate.yml
@@ -46,6 +46,12 @@ jobs:
       - name: Setup Squidbot Env
         run: ./scripts/gen-gha-env.sh
 
+      - name: Build & Unit Test Rust Services
+        run: docker compose -f squidbot-build.debug.yml run build
+
+      - name: Build Docker Images
+        run: docker compose build
+      
       - name: Run Squidbot
         run: docker compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.val.yml up -d
 
@@ -53,6 +59,10 @@ jobs:
       #- name: Run Voice Integration Test
       #  run: bundle exec tests/voice/run.rb
       #  timeout-minutes: 1
+
+      - name: Run TxtCmd Integration Test
+        run: bundle exec tests/txt_cmds/run.rb
+        timeout-minutes: 1
 
       - name: Collect Docker Logs
         if: failure()
