build: install libssl for docker build

--- a/squidbot-build.release.yml
+++ b/squidbot-build.release.yml
@@ -11,6 +11,8 @@ services:
             - /bin/sh
             - -c
             - |
+                apt update
+                apt install pkg-config libssl-dev -y
                 cd /build/
                 cargo build -r && cargo test
         volumes:
